--- a/index.html
+++ b/index.html
@@ -5,34 +5,23 @@
   <meta name="viewport" content="width=device-width,initial-scale=1,viewport-fit=cover" />
   <title>Fruit Tap</title>
   <style>
-    :root{
-      font-family:-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,"PingFang SC","Microsoft YaHei",sans-serif;
-    }
+    :root{font-family:-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,"PingFang SC","Microsoft YaHei",sans-serif;}
     *{box-sizing:border-box;}
     body{
-      margin:0;
-      min-height:100vh;
-      display:flex;
-      align-items:center;
-      justify-content:center;
-      background:#0b1020;
-      overflow:hidden;
+      margin:0; min-height:100vh; overflow:hidden;
+      background:
+        radial-gradient(1100px 700px at 20% 15%, rgba(255,239,154,.55) 0%, rgba(255,239,154,0) 55%),
+        radial-gradient(1000px 700px at 85% 10%, rgba(169,242,255,.55) 0%, rgba(169,242,255,0) 55%),
+        radial-gradient(900px 700px at 20% 85%, rgba(255,193,240,.55) 0%, rgba(255,193,240,0) 55%),
+        linear-gradient(135deg, #7c3aed 0%, #2563eb 35%, #22c55e 100%);
+      display:flex; align-items:center; justify-content:center;
+      padding:14px;
     }
 
-    /* --- 水果背景：用 emoji 拼成“很多水果”的图案（不依赖外部图片） --- */
-    .bg{
-      position:fixed; inset:0;
-      background:
-        radial-gradient(1200px 700px at 20% 10%, rgba(255,255,255,.24), transparent 60%),
-        radial-gradient(1000px 700px at 85% 15%, rgba(255,255,255,.18), transparent 60%),
-        radial-gradient(900px 700px at 30% 85%, rgba(255,255,255,.18), transparent 60%),
-        linear-gradient(135deg, #7c3aed 0%, #2563eb 35%, #22c55e 100%);
-      z-index:-2;
-    }
+    /* 水果背景图案（emoji） */
     .fruitPattern{
       position:fixed; inset:-40px;
-      opacity:.18;
-      z-index:-1;
+      opacity:.18; z-index:-1;
       background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='280' height='280'%3E%3Crect width='280' height='280' fill='none'/%3E%3Cg font-size='44'%3E%3Ctext x='12' y='58'%3E%F0%9F%8D%8E%3C/text%3E%3Ctext x='120' y='80'%3E%F0%9F%8D%93%3C/text%3E%3Ctext x='210' y='62'%3E%F0%9F%8D%8A%3C/text%3E%3Ctext x='40' y='150'%3E%F0%9F%8D%8C%3C/text%3E%3Ctext x='140' y='160'%3E%F0%9F%8D%89%3C/text%3E%3Ctext x='210' y='170'%3E%F0%9F%8D%87%3C/text%3E%3Ctext x='20' y='250'%3E%F0%9F%8D%8D%3C/text%3E%3Ctext x='120' y='250'%3E%F0%9F%A5%AD%3C/text%3E%3Ctext x='220' y='250'%3E%F0%9F%8D%90%3C/text%3E%3C/g%3E%3C/svg%3E");
       background-repeat: repeat;
       background-size: 280px 280px;
@@ -45,125 +34,51 @@
       position:relative;
       border-radius:28px;
       overflow:hidden;
-      display:flex;
-      align-items:center;
-      justify-content:center;
+      display:flex; align-items:center; justify-content:center;
     }
 
-    /* ---------- 屏 1：启动页 ---------- */
-    .screen{
-      position:absolute; inset:0;
-      display:flex;
-      align-items:center;
-      justify-content:center;
-    }
-    .home{
-      display:flex;
-      align-items:center;
-      justify-content:center;
-    }
-
-    /* 超大动画开始按钮 */
+    /* 屏1：启动页，只一个大按钮 */
+    .screen{position:absolute; inset:0; display:flex; align-items:center; justify-content:center;}
+    .home{display:flex; align-items:center; justify-content:center;}
     .bigStart{
-      width:min(280px, 72vw);
-      height:min(280px, 72vw);
-      border-radius: 999px;
-      border:0;
-      cursor:pointer;
+      width:min(280px, 72vw); height:min(280px, 72vw);
+      border-radius:999px; border:0; cursor:pointer;
       background: rgba(255,255,255,.26);
       backdrop-filter: blur(10px);
       box-shadow: 0 28px 70px rgba(0,0,0,.35);
-      display:grid;
-      place-items:center;
-      position:relative;
-      user-select:none;
+      display:grid; place-items:center;
+      position:relative; user-select:none;
       -webkit-tap-highlight-color: transparent;
-      transform: translateZ(0);
       animation: floaty 1.8s ease-in-out infinite;
     }
-    @keyframes floaty{
-      0%,100%{ transform: translateY(0); }
-      50%{ transform: translateY(-10px); }
-    }
+    @keyframes floaty{0%,100%{transform:translateY(0);}50%{transform:translateY(-10px);}}
     .bigStart::before{
-      content:"";
-      position:absolute; inset:14px;
-      border-radius:999px;
+      content:""; position:absolute; inset:14px; border-radius:999px;
       background: radial-gradient(circle at 30% 30%, rgba(255,255,255,.9), rgba(255,255,255,.15) 55%, rgba(255,255,255,.08) 70%);
     }
     .bigStart::after{
-      content:"";
-      position:absolute; inset:-10px;
-      border-radius:999px;
+      content:""; position:absolute; inset:-10px; border-radius:999px;
       border: 2px solid rgba(255,255,255,.35);
       animation: pulse 1.2s ease-in-out infinite;
     }
-    @keyframes pulse{
-      0%{ transform: scale(.98); opacity:.55; }
-      70%{ transform: scale(1.05); opacity:.0; }
-      100%{ transform: scale(1.05); opacity:0; }
-    }
-    .startIcon{
-      position:relative;
-      display:flex;
-      flex-direction:column;
-      align-items:center;
-      justify-content:center;
-      gap:10px;
-    }
-    .bunny{
-      font-size: 86px;
-      filter: drop-shadow(0 10px 14px rgba(0,0,0,.25));
-      animation: bunnyDance 600ms ease-in-out infinite;
-      transform-origin: 50% 80%;
-    }
-    @keyframes bunnyDance{
-      0%{ transform: translateY(8px) rotate(-6deg) scale(1.0); }
-      25%{ transform: translateY(-10px) rotate(6deg) scale(1.06); }
-      50%{ transform: translateY(8px) rotate(-6deg) scale(1.0); }
-      75%{ transform: translateY(-10px) rotate(6deg) scale(1.06); }
-      100%{ transform: translateY(8px) rotate(-6deg) scale(1.0); }
-    }
-    .play{
-      font-size: 56px;
-      filter: drop-shadow(0 10px 14px rgba(0,0,0,.25));
-    }
+    @keyframes pulse{0%{transform:scale(.98);opacity:.55;}70%{transform:scale(1.05);opacity:0;}100%{transform:scale(1.05);opacity:0;}}
+    .startIcon{position:relative; display:flex; flex-direction:column; align-items:center; gap:10px;}
+    .bunny{font-size: 92px; filter: drop-shadow(0 10px 14px rgba(0,0,0,.25));}
+    .play{font-size: 56px; filter: drop-shadow(0 10px 14px rgba(0,0,0,.25));}
 
-    /* ---------- 屏 2：游戏页（简化） ---------- */
-    .game{
-      display:none;
-      padding: 16px;
-      gap: 14px;
-      flex-direction:column;
-      align-items:stretch;
-      justify-content:flex-start;
-    }
-
-    .topRow{
-      display:flex;
-      align-items:center;
-      justify-content:flex-start;
-      gap:14px;
-      padding-top: 6px;
-    }
+    /* 屏2：游戏页（简化） */
+    .game{display:none; padding:16px; gap:14px; flex-direction:column; align-items:stretch;}
+    .topRow{display:flex; gap:14px; padding-top:6px;}
     .iconBtn{
-      width:72px;
-      height:72px;
-      border-radius: 22px;
-      border:0;
-      cursor:pointer;
+      width:72px; height:72px; border-radius:22px; border:0; cursor:pointer;
       background: rgba(255,255,255,.28);
       backdrop-filter: blur(10px);
       box-shadow: 0 18px 40px rgba(0,0,0,.22);
-      display:grid;
-      place-items:center;
-      user-select:none;
-      -webkit-tap-highlight-color: transparent;
-      font-size: 30px;
+      display:grid; place-items:center; font-size:30px;
+      user-select:none; -webkit-tap-highlight-color: transparent;
     }
-    .iconBtn:active{ transform: scale(.98); }
+    .iconBtn:active{transform:scale(.98);}
 
-    /* 4 张图：无边框（不画框） */
     .grid{
       margin-top: 8px;
       display:grid;
@@ -173,37 +88,28 @@
       align-content:start;
     }
     .tile{
-      border:0;
-      background: transparent;
-      padding: 0;
+      border:0; background: transparent; padding:0;
       cursor:pointer;
-      display:flex;
-      align-items:center;
-      justify-content:center;
+      min-height:170px;
+      display:flex; align-items:center; justify-content:center;
       -webkit-tap-highlight-color: transparent;
       user-select:none;
-      min-height: 170px; /* 固定高度避免闪烁跳动 */
     }
-    .tile:active{ transform: scale(.99); }
-    .tile img{
-      width: 86%;
-      height: auto;
-      max-height: 220px;
-      object-fit: contain;
-      pointer-events:none;
+    .tile:active{transform:scale(.99);}
+    .emoji{
+      font-size: 96px;
       filter: drop-shadow(0 20px 26px rgba(0,0,0,.25));
     }
 
-    /* 成功弹层：上层弹出 GOOD（简单） */
+    /* 成功/失败 弹层 */
     .overlay{
       position:absolute; inset:0;
       display:none;
-      align-items:center;
-      justify-content:center;
+      align-items:center; justify-content:center;
       background: rgba(0,0,0,.16);
       backdrop-filter: blur(3px);
     }
-    .goodPop{
+    .pop{
       width:min(320px, 80%);
       border-radius: 28px;
       background: rgba(255,255,255,.88);
@@ -213,7 +119,7 @@
       position:relative;
       overflow:hidden;
     }
-    .goodWord{
+    .word{
       font-weight:1000;
       font-size: 52px;
       letter-spacing:2px;
@@ -221,10 +127,18 @@
       margin-top: 6px;
     }
     .popBunny{
-      font-size: 76px;
+      font-size: 86px;
       margin-top: 6px;
-      animation: bunnyDance 600ms ease-in-out infinite;
       transform-origin: 50% 80%;
+      filter: drop-shadow(0 10px 14px rgba(0,0,0,.18));
+    }
+    .dance{ animation: bunnyDance 600ms ease-in-out infinite; }
+    @keyframes bunnyDance{
+      0%{ transform: translateY(8px) rotate(-6deg) scale(1.0); }
+      25%{ transform: translateY(-10px) rotate(6deg) scale(1.06); }
+      50%{ transform: translateY(8px) rotate(-6deg) scale(1.0); }
+      75%{ transform: translateY(-10px) rotate(6deg) scale(1.06); }
+      100%{ transform: translateY(8px) rotate(-6deg) scale(1.0); }
     }
 
     /* 彩纸 */
@@ -242,11 +156,10 @@
   </style>
 </head>
 <body>
-  <div class="bg"></div>
   <div class="fruitPattern"></div>
 
   <div class="app">
-    <!-- 屏 1：启动页 -->
+    <!-- 屏 1 -->
     <div class="screen home" id="homeScreen">
       <button class="bigStart" id="homeStart" aria-label="start">
         <div class="startIcon">
@@ -256,7 +169,7 @@
       </button>
     </div>
 
-    <!-- 屏 2：游戏页 -->
+    <!-- 屏 2 -->
     <div class="screen game" id="gameScreen">
       <div class="topRow">
         <button class="iconBtn" id="btnStart" aria-label="start">▶️</button>
@@ -265,28 +178,28 @@
       <div class="grid" id="grid"></div>
     </div>
 
-    <!-- 成功弹层 -->
+    <!-- 弹层 -->
     <div class="overlay" id="overlay">
-      <div class="goodPop" id="goodPop">
-        <div class="goodWord">GOOD</div>
-        <div class="popBunny">🐰</div>
+      <div class="pop" id="pop">
+        <div class="word" id="popWord">GOOD</div>
+        <div class="popBunny dance" id="popBunny">🐰</div>
       </div>
     </div>
   </div>
 
 <script>
-  // 10 个水果图片（要求：放在 img/ 下）
+  // 10 个水果（emoji 一定能显示）
   const BANK = [
-    { en:"apple",      pic:"img/apple.png" },
-    { en:"banana",     pic:"img/banana.png" },
-    { en:"orange",     pic:"img/orange.png" },
-    { en:"grape",      pic:"img/grape.png" },
-    { en:"strawberry", pic:"img/strawberry.png" },
-    { en:"watermelon", pic:"img/watermelon.png" },
-    { en:"pear",       pic:"img/pear.png" },
-    { en:"peach",      pic:"img/peach.png" },
-    { en:"mango",      pic:"img/mango.png" },
-    { en:"pineapple",  pic:"img/pineapple.png" },
+    { en:"apple",      emoji:"🍎" },
+    { en:"banana",     emoji:"🍌" },
+    { en:"orange",     emoji:"🍊" },
+    { en:"grape",      emoji:"🍇" },
+    { en:"strawberry", emoji:"🍓" },
+    { en:"watermelon", emoji:"🍉" },
+    { en:"pear",       emoji:"🍐" },
+    { en:"peach",      emoji:"🍑" },
+    { en:"mango",      emoji:"🥭" },
+    { en:"pineapple",  emoji:"🍍" },
   ];
 
   const homeScreen = document.getElementById("homeScreen");
@@ -296,14 +209,15 @@
   const btnRepeat  = document.getElementById("btnRepeat");
   const gridEl     = document.getElementById("grid");
   const overlay    = document.getElementById("overlay");
-  const goodPop    = document.getElementById("goodPop");
+  const pop        = document.getElementById("pop");
+  const popWord    = document.getElementById("popWord");
+  const popBunny   = document.getElementById("popBunny");
 
   let current = null;
   let locked = false;
   let voiceUnlocked = false;
   let chosenVoice = null;
 
-  // --- 工具：洗牌 ---
   function shuffle(arr){
     for (let i = arr.length - 1; i > 0; i--) {
       const j = Math.floor(Math.random() * (i + 1));
@@ -311,7 +225,6 @@
     }
   }
 
-  // --- 语音：选更好的英文 voice（iOS Siri / Enhanced / Premium 优先）---
   function pickBestEnglishVoice() {
     if (!("speechSynthesis" in window)) return null;
     const voices = window.speechSynthesis.getVoices() || [];
@@ -320,7 +233,7 @@
     return prefer(/siri/i) || prefer(/premium|enhanced/i) || en.find(v => v.lang === "en-US") || en[0] || null;
   }
 
-  function speakEN(text) {
+  function speakEN(text){
     if (!("speechSynthesis" in window)) return;
     window.speechSynthesis.cancel();
     const u = new SpeechSynthesisUtterance(text);
@@ -332,60 +245,8 @@
     window.speechSynthesis.speak(u);
   }
 
-  // --- 预加载：修复“点击开始后图片闪 2 秒” ---
-  function preloadAllImages(){
-    const urls = BANK.map(x => x.pic);
-    return Promise.all(urls.map(url => new Promise(resolve => {
-      const img = new Image();
-      img.onload = () => resolve(true);
-      img.onerror = () => resolve(true); // 即使失败也不阻塞
-      img.src = url;
-    })));
-  }
-
-  // --- 无闪渲染：先生成新的 DOM，图片 ready 后再一次性替换 ---
-  function renderOptions(options){
-    // 保持高度，不要先清空导致“空白”
-    const frag = document.createDocumentFragment();
-
-    options.forEach(item => {
-      const btn = document.createElement("button");
-      btn.className = "tile";
-      btn.setAttribute("aria-label", item.en);
-
-      const img = document.createElement("img");
-      img.src = item.pic;
-      img.alt = item.en;
-      img.decoding = "async";
-      img.loading = "eager";
-
-      btn.appendChild(img);
-      btn.onclick = () => onPick(item);
-      frag.appendChild(btn);
-    });
-
-    // 一次性替换，避免闪
-    gridEl.replaceChildren(frag);
-  }
-
-  function nextQuestion(){
-    locked = false;
-    overlay.style.display = "none";
-
-    current = BANK[Math.floor(Math.random() * BANK.length)];
-    const others = BANK.filter(x => x.en !== current.en);
-    shuffle(others);
-    const options = [current, ...others.slice(0, 3)];
-    shuffle(options);
-
-    renderOptions(options);
-
-    if (voiceUnlocked) speakEN(current.en);
-  }
-
-  function popGood(){
-    // 彩纸
-    [...goodPop.querySelectorAll(".confetti")].forEach(x => x.remove());
+  function popConfetti(){
+    [...pop.querySelectorAll(".confetti")].forEach(x => x.remove());
     const colors = ["#22c55e","#3b82f6","#f59e0b","#ef4444","#a855f7","#14b8a6"];
     for (let i=0;i<14;i++){
       const s = document.createElement("div");
@@ -395,11 +256,54 @@
       s.style.bottom = "10px";
       s.style.setProperty("--x0", (Math.random()*120 - 60).toFixed(1) + "px");
       s.style.setProperty("--x1", (Math.random()*240 - 120).toFixed(1) + "px");
-      goodPop.appendChild(s);
+      pop.appendChild(s);
     }
+  }
 
-    overlay.style.display = "flex";
-    setTimeout(() => { overlay.style.display = "none"; }, 850);
+  function showOverlay(kind){
+    // kind: "good" | "no"
+    if (kind === "good"){
+      popWord.textContent = "GOOD";
+      popBunny.textContent = "🐰";
+      popBunny.classList.add("dance");     // 跳舞
+      popBunny.style.filter = "drop-shadow(0 10px 14px rgba(0,0,0,.18))";
+      popConfetti();
+      overlay.style.display = "flex";
+      setTimeout(() => overlay.style.display = "none", 850);
+    } else {
+      popWord.textContent = "NO";
+      popBunny.textContent = "🐰😢";       // 流泪兔（简单直观）
+      popBunny.classList.remove("dance");  // 不跳舞
+      [...pop.querySelectorAll(".confetti")].forEach(x => x.remove());
+      overlay.style.display = "flex";
+      setTimeout(() => overlay.style.display = "none", 650);
+    }
+  }
+
+  function renderQuestion(){
+    locked = false;
+    overlay.style.display = "none";
+
+    current = BANK[Math.floor(Math.random() * BANK.length)];
+    const others = BANK.filter(x => x.en !== current.en);
+    shuffle(others);
+    const options = [current, ...others.slice(0,3)];
+    shuffle(options);
+
+    const frag = document.createDocumentFragment();
+    options.forEach(item => {
+      const btn = document.createElement("button");
+      btn.className = "tile";
+      btn.setAttribute("aria-label", item.en);
+      btn.innerHTML = `<div class="emoji">${item.emoji}</div>`;
+      btn.onclick = () => onPick(item);
+      frag.appendChild(btn);
+    });
+
+    // 不清空闪烁：一次性替换
+    gridEl.replaceChildren(frag);
+
+    if (voiceUnlocked) speakEN(current.en);
   }
 
   function onPick(item){
@@ -407,39 +311,28 @@
     locked = true;
 
     if (item.en === current.en){
-      popGood();
+      showOverlay("good");
       if (voiceUnlocked) speakEN("Good");
-      setTimeout(nextQuestion, 900);
+      setTimeout(renderQuestion, 900);
     } else {
-      // 错误：只读一次（不加文字）
-      if (voiceUnlocked) speakEN("Try again");
+      showOverlay("no");
+      if (voiceUnlocked) speakEN("No");
       setTimeout(() => { locked = false; }, 450);
     }
-  }
-
-  function enterGame(){
-    homeScreen.style.display = "none";
-    gameScreen.style.display = "flex";
   }
 
   async function startFlow(){
     voiceUnlocked = true;
     window.speechSynthesis.getVoices();
     chosenVoice = pickBestEnglishVoice();
-
-    // 先预加载图片，再进入游戏页 -> 根治闪屏
-    await preloadAllImages();
-
-    enterGame();
-    nextQuestion();
+    homeScreen.style.display = "none";
+    gameScreen.style.display = "flex";
+    renderQuestion();
   }
 
-  // 启动页：只有一个按钮
   homeStart.addEventListener("click", startFlow);
 
-  // 游戏页：两个按钮
   btnStart.addEventListener("click", () => {
-    // 开始：只读当前题
     voiceUnlocked = true;
     window.speechSynthesis.getVoices();
     chosenVoice = pickBestEnglishVoice();
@@ -454,14 +347,12 @@
     if (current) speakEN(current.en);
   });
 
-  // voices 异步加载
   if ("speechSynthesis" in window) {
     window.speechSynthesis.onvoiceschanged = () => {
       chosenVoice = pickBestEnglishVoice();
     };
   }
 
-  // 点遮罩关闭（不显示文字）
   overlay.addEventListener("click", () => overlay.style.display = "none");
 </script>
 </body>
